--- a/package.json
+++ b/package.json
@@ -5,21 +5,30 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "server": "json-server server.json -p 3001"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "axios": "^0.21.1",
+    "css-loader": "^5.2.4",
     "framer-motion": "^4",
+    "json-server": "^0.16.3",
     "next": "10.2.0",
+    "node-sass": "^6.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass-loader": "^11.1.1",
+    "style-loader": "^2.0.0",
+    "swiper": "^6.6.1"
   },
   "devDependencies": {
     "@types/node": "^15.3.0",
     "@types/react": "^17.0.5",
     "@types/typescript": "^2.0.0",
+    "live-server": "^1.2.1",
     "typescript": "^4.2.4"
   }
 }
