--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "framer-motion": "^4",
     "json-server": "^0.16.3",
     "next": "10.2.0",
-    "node-sass": "^6.0.0",
+    "node-sass": "4.14.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-scripts": "^4.0.3",
     "sass-loader": "^11.1.1",
     "style-loader": "^2.0.0",
     "swiper": "^6.6.1"
@@ -28,7 +29,6 @@
     "@types/node": "^15.3.0",
     "@types/react": "^17.0.5",
     "@types/typescript": "^2.0.0",
-    "live-server": "^1.2.1",
     "typescript": "^4.2.4"
   }
 }
